# idig

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: cli.rs  lib.rs  main.rs
src/application/: display_service.rs  extract_service.rs  list_service.rs  mod.rs  search_service.rs
src/domain/: mod.rs
src/domain/entities/: file.rs  metadata.rs  mod.rs
src/domain/queries/: file_query.rs  mod.rs
src/domain/repositories/: file_repository.rs  metadata_repository.rs  mod.rs
src/domain/value_objects/: domain.rs  file_flags.rs  file_id.rs  metadata_id.rs  mod.rs  relative_path.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: connection.rs  mod.rs
src/infrastructure/database/entities/: files.rs  mod.rs
src/infrastructure/plist/entities/: backup_info.rs  mod.rs
src/infrastructure/repositories/: file_repository_impl.rs  metadata_repository_impl.rs  mod.rs
