[package]
name = "idig"
description = "A tool for extracting files from iPhone backups"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/akiomik/idig"
license = "Apache-2.0"
authors = ["Akiomi Kamakura <akiomik@gmail.com>"]
keywords = ["iphone", "backup"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
bitflags = "2.10"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0"
plist = "1.7.4"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1"
tabled = "0.20"
tokio = { version = "1.48", features = ["full"] }

[dev-dependencies]
assert_fs = "1.1"
predicates = "3.1"
pretty_assertions = "1.4.1"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "mock"] }

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo
multiple_crate_versions = "allow"
# pedantic
module_name_repetitions = "allow"
# restrictions
absolute_paths = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
blanket_clippy_restriction_lints = "warn"
clone_on_ref_ptr = "warn"
empty_structs_with_brackets = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
expect_used = "warn"
integer_division_remainder_used = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_inline_in_public_items = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
unwrap_in_result = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
